[package]
name = "nod"
version = "0.2.0"
edition = "2021"
rust-version = "1.56.0"
authors = ["Luke Street <luke@street.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/encounter/nod-rs"
documentation = "https://docs.rs/nod"
readme = "README.md"
description = """
Rust library and CLI tool for reading GameCube and Wii disc images.
"""
keywords = ["gamecube", "wii", "iso", "nfs", "gcm"]
categories = ["command-line-utilities", "parser-implementations"]

[[bin]]
name = "nodtool"
path = "src/bin.rs"

[profile.release-lto]
inherits = "release"
lto = "thin"
strip = "debuginfo"

[features]
default = ["compress-bzip2", "compress-zstd"] #, "compress-lzma"
asm = ["md-5/asm", "sha1/asm"]
compress-bzip2 = ["bzip2"]
compress-zstd = ["zstd"]
#compress-lzma = ["xz2"]
nightly = ["crc32fast/nightly"]

[dependencies]
aes = "0.8.3"
argh = "0.1.12"
argh_derive = "0.1.12"
base16ct = "0.2.0"
binrw = "0.13.3"
bytemuck = "1.14.1"
bzip2 = { version = "0.4.4", optional = true }
cbc = "0.1.2"
crc32fast = "1.3.2"
encoding_rs = "0.8.33"
file-size = "1.0.3"
md-5 = "0.10.6"
sha1 = "0.10.6"
thiserror = "1.0.56"
xz2 = { version = "0.1.7", optional = true }
zstd = { version = "0.13.0", optional = true }
