[workspace]
members = ["nod", "nodtool"]
resolver = "2"

[profile.release-lto]
inherits = "release"
lto = "fat"
strip = "debuginfo"
codegen-units = 1

[workspace.package]
version = "1.4.1"
edition = "2021"
rust-version = "1.74"
authors = ["Luke Street <luke@street.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/encounter/nod-rs"
keywords = ["gamecube", "wii", "iso", "wbfs", "rvz"]
